Select appearance bug on Windows Chrome fixed. KotBS wrapping on home page fixed.

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -150,6 +150,7 @@
   &__list {
     flex-basis: 50%;
     margin-bottom: ($base-spacing * 2);
+    flex-grow: 1;
     &__item {
       display: inline-block;
       font-size: $font-size-breadcrumb;
