--- a/src/scss/components/SelectLevel.scss
+++ b/src/scss/components/SelectLevel.scss
@@ -14,7 +14,7 @@
   &__select {
     height: 2.8rem;
     font-size: 1.2rem;
-    padding: 1rem;
+    padding: 0 0.5rem;
     border: 1px solid $color-base-border;
     border-radius: $border-radius-base;
   }
